made .screenshots without anitations

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Landing template</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -247,8 +248,8 @@
         you’re
         already a developer, or a PM, or a UX designer, why develop this totally separate skill?</p>
       <div class="screenshots__gallery">
-        <!--<button type="button" class="slider-toggle  slider-toggle&#45;&#45;left  round"></button>-->
-        <!--<button type="button" class="slider-toggle  slider-toggle&#45;&#45;right  round"></button>-->
+        <button type="button" class="slider-toggle  slider-toggle--left  round"></button>
+        <button type="button" class="slider-toggle  slider-toggle--right  round"></button>
         <div class="screenshots__slider">
           <div class="screenshots__item  screenshots__item--1"></div>
           <div class="screenshots__item  screenshots__item--2"></div>
