made mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -417,17 +417,17 @@
       <div class="download__list">
         <div class="app-link  app-link--apple">
           <span class="app-link__title">Download</span>
-          <p class="text text--gray">Download from App store</p>
+          <p class="text text--gray">Download from App&nbsp;store</p>
         </div>
 
         <div class="app-link  app-link--google">
           <span class="app-link__title">Download</span>
-          <p class="text text--gray">Download from Play store</p>
+          <p class="text text--gray">Download from Play&nbsp;store</p>
         </div>
 
         <div class="app-link  app-link--microsoft">
           <span class="app-link__title">Download</span>
-          <p class="text text--gray">Download from Microsoft store</p>
+          <p class="text text--gray">Download from Microsoft&nbsp;store</p>
         </div>
       </div>
     </div>
