add #links in .page-header

--- a/src/index.html
+++ b/src/index.html
@@ -109,9 +109,9 @@
       </a>
       <ul class="main-nav__list">
         <li class="main-nav__item"><a>Home</a></li>
-        <li class="main-nav__item"><a>Features</a></li>
-        <li class="main-nav__item"><a>Picing</a></li>
-        <li class="button  button--main-nav" type="button">Download Now</li>
+        <li class="main-nav__item"><a href="#advantages">Features</a></li>
+        <li class="main-nav__item"><a href="#prices">Picing</a></li>
+        <li class="button  button--main-nav" type="button"><a href="#download">Download Now</a></li>
       </ul>
     </nav>
     <div class="start-home">
@@ -140,7 +140,7 @@
             Very easy to customize : set up in minutes
           </li>
         </ul>
-        <button class="button  button--start-home" type="button">Start Exploring Us</button>
+        <button class="button  button--start-home" type="button"><a href="#advantages">Start Exploring Us</a></button>
       </div>
       <!--<div class="start-home__images">-->
       <!--<img src="img/iPhones.png"-->
@@ -152,7 +152,7 @@
 
 <main class="main">
 
-  <section class="advantages  section">
+  <section class="advantages  section"  id="advantages">
     <div class="advantages__list">
       <div class="advantage-item  advantage-item--online">
         <svg class="icon  icon__advantages  icon--pink" width="75" height="26">
@@ -263,7 +263,7 @@
     </div>
   </section>
 
-  <section class="prices  section">
+  <section class="prices  section" id="prices">
     <div class="prices__wrapper">
       <h2 class="section-title  section-title--center">We've got the perfect package for you</h2>
       <p class="text text--center  text--gray">Everyone’s reasons for learning user interface design are different. If
@@ -411,7 +411,7 @@
     </div>
   </section>
 
-  <section class="download  section">
+  <section class="download  section" id="download">
     <div class="download__wrapper">
       <h2 class="download__title  section-title  section-title--center">Download Giant App Now</h2>
       <div class="download__list">
